Add Comparator and Blog routes. Also add Sass mixers and vars and create navbar

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -1,2 +1,33 @@
-$title: red
-$sub-title: orange
+// Colors
+// The numbers represents how light the color is. 0 is the lightest
+
+// Whites
+$white-0: #E0E0E0 // White Text
+$white-1: #d6d6d6
+$white-2: #cccccc
+$white-3: #c2c2c2
+
+// Blue
+$blue-7: #161B33 // Dark Background
+$blue-6: #1B2246 // Dark Container Boxes
+$blue-5: #1d254c
+$blue-4: #2E3868 // Search Buttons
+
+// Violet
+$violet-5: #591778 // Active Routes
+$violet-4: #68168F 
+$violet-3: #6d1896 // Normal Buttons
+
+// Cyan
+$cyan-4: #0DE0C7 // Stats | Date Time & Boss Names
+
+// Orange  
+$orange-5: #E0980D // iLvL Text & Raid Names
+
+// Active Route
+$active-route: #672daf
+
+// Qualities
+$poor: #9d9d9d 
+$epic: #972DA7
+$rare: #1068DD
