Add home background shape & add Footer

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -14,6 +14,7 @@ $blue-5: #1d254c
 $blue-4: #2E3868 // Search Buttons
 
 // Violet
+$violet-8: #380f4c
 $violet-5: #591778 // Active Routes
 $violet-4: #68168F 
 $violet-3: #6d1896 // Normal Buttons
@@ -25,7 +26,8 @@ $cyan-4: #0DE0C7 // Stats | Date Time & Boss Names
 $orange-5: #E0980D // iLvL Text & Raid Names
 
 // Active Route
-$active-route: #672daf
+$hover-route: #672daf
+$active-route: #7737c6
 
 // Qualities
 $poor: #9d9d9d 
