--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -22,7 +22,7 @@
 
 // Lines
 =line
-  border: 1px solid $orange-5
+  border: 1px solid $violet-4
 
 =line--vertical($property)
   transform: $property
