Minor scrollbar styling changes

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -15,7 +15,9 @@ $blue-4: #2E3868 // Search Buttons
 
 // Violet
 $violet-8: #380f4c
-$violet-5: #591778 // Active Routes
+$violet-7: #421459
+$violet-6: #5c137f
+$violet-5: #52206b // Active Routes
 $violet-4: #68168F 
 $violet-3: #6d1896 // Normal Buttons
 
