Add Battle of Dazar'alor in the progression view

--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -26,3 +26,10 @@
 
 =line--vertical($property)
   transform: $property
+
+=progress__background($background)
+  background: url($background)
+  background-repeat: no-repeat
+  background-color: darken($blue-5, 8%)
+  background-blend-mode: soft-light
+  background-position: left
