Create a basic news layout to the home page

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -35,3 +35,7 @@ $active-route: #7737c6
 $poor: #7c7c7c 
 $epic: #972DA7
 $rare: #1068DD
+
+// Blog Posts
+$post-border: rgba(46, 56, 104, 0.8)
+$description-color: #a3b8cc 
