Make several changes for the website buttons

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -26,6 +26,7 @@ $cyan-4: #0DE0C7 // Stats | Date Time & Boss Names
 
 // Orange  
 $orange-5: #E0980D // iLvL Text & Raid Names
+$orange-4: #af6401
 
 // Active Route
 $hover-route: #672daf
@@ -37,5 +38,5 @@ $epic: #972DA7
 $rare: #1068DD
 
 // Blog Posts
-$post-border: rgba(46, 56, 104, 0.8)
+$post-border: rgba(49, 61, 114, 0.8)
 $description-color: #a3b8cc 
