Redesign the landing page, mounts, and pets. Also improve upon the comparator form design

--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -4,8 +4,8 @@
   border-radius: 2px 
   padding: 8px 14px
   text-transform: uppercase
-  margin: 0 7px
-  font-size: 16px
+  margin: 0 0.2rem
+  font-size: 13px
   font-weight: 300
   letter-spacing: 1px
   outline: none
