--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -8,6 +8,7 @@ $white-2: #cccccc
 $white-3: #c2c2c2
 
 // Blue
+$blue-8: #0f1324
 $blue-7: #161B33 // Dark Background
 $blue-6: #1B2246 // Dark Container Boxes
 $blue-5: #1d254c
@@ -40,3 +41,6 @@ $rare: #1068DD
 // Blog Posts
 $post-border: rgba(49, 61, 114, 0.8)
 $description-color: #a3b8cc 
+
+// Text shadow
+$text-shadow: 0 2px 4px rgba(0,0,0,.8), 0 8px 16px rgba(0,0,0,.6)
