Redesign the Progression comparator view

--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -29,6 +29,16 @@
   text-transform: none
   padding: 6px 12px
 
+=btn--grid
+  border: 2px solid $orange-4
+  text-transform: none
+  padding: 6px 12px
+  background: none
+  transition: 0.2s
+  margin: 0 1rem
+  &:hover
+    background: $orange-5
+
 // Lines
 =line
   border: 1px solid $violet-4
