--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -2,6 +2,8 @@
 // The numbers represents how light the color is. 0 is the lightest
 
 // Whites
+$white-5: #9d9d9d
+$white-4: #b1b1b1
 $white-3: #c2c2c2
 $white-2: #cccccc
 $white-1: #d6d6d6
