Refactor the ambundance of "this", and improve the Grid button styling

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -27,9 +27,10 @@ $violet-3: #6d1896 // Normal Buttons
 // Cyan
 $cyan-4: #0DE0C7 // Stats | Date Time & Boss Names
 
-// Orange  
-$orange-5: #E0980D // iLvL Text & Raid Names
-$orange-4: #af6401
+// Orange 
+$orange-6: #895001
+$orange-5: #af6401
+$orange-4: #E0980D // iLvL Text & Raid Names
 
 // Active Route
 $hover-route: #672daf
