--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -43,7 +43,7 @@ $rare: #1068DD
 
 // Blog Posts
 $post-border: rgba(49, 61, 114, 0.8)
-$description-color: #a3b8cc 
+$subtitle-color: #a3b8cc 
 
 // Text shadow
 $text-shadow: 0 2px 4px rgba(0,0,0,.8), 0 8px 16px rgba(0,0,0,.6)
