Create an admin login view

--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -20,6 +20,20 @@
   border: none
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25)
 
+=btn--green
+  background-color: $green-3
+  text-transform: none
+  padding: 0.6rem 1rem
+  border: none
+  box-shadow: 0px 3px 3px rgba(12, 50, 75, 0.25)
+
+=btn--red
+  background-color: $red-3
+  text-transform: none
+  padding: 0.6rem 1rem
+  border: none
+  box-shadow: 0px 3px 3px rgba(12, 50, 75, 0.25)
+
 =btn--purple
   border: 2px solid $violet-4
   width: 5%
@@ -45,10 +59,3 @@
 
 =line--vertical($property)
   transform: $property
-
-=progress__background($background)
-  background: url($background)
-  background-repeat: no-repeat
-  background-color: darken($blue-5, 8%)
-  background-blend-mode: soft-light
-  background-position: left
