--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -32,6 +32,12 @@ $orange-6: #895001
 $orange-5: #af6401
 $orange-4: #E0980D // iLvL Text & Raid Names
 
+// Green
+$green-3: #07a77b
+
+// Red
+$red-3: #cb1b1b
+
 // Active Route
 $hover-route: #672daf
 $active-route: #7737c6
