--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -14,25 +14,31 @@
     cursor: pointer
 
 =btn--blue
-  background-color: $blue-4
+  background: $blue-4
   padding: 6px 12px
   text-transform: none
   border: none
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25)
 
 =btn--green
-  background-color: $green-3
+  background: $green-3
   text-transform: none
   padding: 0.6rem 1rem
   border: none
   box-shadow: 0px 3px 3px rgba(12, 50, 75, 0.25)
+  transition: all 0.4s
+  &:hover
+    background-color: $green-4
 
 =btn--red
-  background-color: $red-3
+  background: none
   text-transform: none
   padding: 0.6rem 1rem
-  border: none
+  border: 2px solid $red-3
   box-shadow: 0px 3px 3px rgba(12, 50, 75, 0.25)
+  transition: all 0.4s
+  &:hover
+    background-color: $red-3
 
 =btn--purple
   border: 2px solid $violet-4
