--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -34,9 +34,11 @@ $orange-4: #E0980D // iLvL Text & Raid Names
 
 // Green
 $green-3: #07a77b
+$green-4: #18c600
 
 // Red
 $red-3: #cb1b1b
+$red-4: #f20000
 
 // Active Route
 $hover-route: #672daf
