Login admin and set token into localStorage

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -11,8 +11,8 @@ $white-0: #E0E0E0 // White Text
 
 // Blue
 $blue-8: #0f1324
-$blue-7: #161B33 // Dark Background
-$blue-6: #1B2246 // Dark Container Boxes
+$blue-7: #161B33
+$blue-6: #1B2246
 $blue-5: #1d254c
 $blue-4: #2E3868 // Search Buttons
 
@@ -37,6 +37,7 @@ $green-3: #07a77b
 $green-4: #18c600
 
 // Red
+$red-2: #ab1616
 $red-3: #cb1b1b
 $red-4: #f20000
 
