--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -31,14 +31,11 @@
     background-color: $green-4
 
 =btn--red
-  background: none
+  background: $red-2
   text-transform: none
   padding: 0.6rem 1rem
-  border: 2px solid $red-3
+  border: none
   box-shadow: 0px 3px 3px rgba(12, 50, 75, 0.25)
-  transition: all 0.4s
-  &:hover
-    background-color: $red-3
 
 =btn--purple
   border: 2px solid $violet-4
