Display logged in user on navbar & editorjs now loads correctly when view is mounted

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -32,6 +32,11 @@ $orange-6: #895001
 $orange-5: #af6401
 $orange-4: #E0980D // iLvL Text & Raid Names
 
+// Yellows
+$yellow-3: #c1c100
+$yellow-4: #d7d700
+$yellow-5: #e1e100
+
 // Green
 $green-3: #07a77b
 $green-4: #18c600
