Failed login attempt now sends the correct error

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -14,7 +14,9 @@ $blue-8: #0f1324
 $blue-7: #161B33
 $blue-6: #1B2246
 $blue-5: #1d254c
-$blue-4: #2E3868 // Search Buttons
+$blue-4: #2E3868
+$blue-3: #3d4a89
+$blue-2: rgba(50, 40, 122, 0.4)
 
 // Violet
 $violet-8: #380f4c
