--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -10,12 +10,13 @@ $white-1: #d6d6d6
 $white-0: #E0E0E0 // White Text
 
 // Blue
+$blue-9: rgba(0, 15, 35, 0.65)
 $blue-8: #0f1324
 $blue-7: #161B33
 $blue-6: #1B2246
 $blue-5: #1d254c
 $blue-4: #2E3868
-$blue-3: #3d4a89
+$blue-3: rgba(75, 24, 130, 0.7)
 $blue-2: rgba(50, 40, 122, 0.4)
 
 // Violet
