Small improvements to the Navbar and change the jumbotron image

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -2,6 +2,7 @@
 // The numbers represents how light the color is. 0 is the lightest
 
 // Whites
+$white-6: #909090
 $white-5: #9d9d9d
 $white-4: #b1b1b1
 $white-3: #c2c2c2
@@ -34,6 +35,7 @@ $cyan-4: #0DE0C7 // Stats | Date Time & Boss Names
 $orange-6: #895001
 $orange-5: #af6401
 $orange-4: #E0980D // iLvL Text & Raid Names
+$orange-3: #f99c20 // iLvL Text & Raid Names
 
 // Yellows
 $yellow-3: #c1c100
