Further styling improvements & admin can now change the jumbotron image from the settings view

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -11,6 +11,7 @@ $white-1: #d6d6d6
 $white-0: #E0E0E0 // White Text
 
 // Blue
+$blue-10: rgba(0, 17, 35, 0.75)
 $blue-9: rgba(0, 15, 35, 0.75)
 $blue-8: #0f1324
 $blue-7: #161B33
@@ -73,3 +74,4 @@ $box-shadow-6: 0 6px 10px rgba(0,0,0, .6), 0 10px 34px rgba(0,0,0, .6)
 $box-shadow-5: 0 6px 10px rgba(0,0,0, .5), 0 8px 32px rgba(0,0,0, .5)
 $box-shadow-4: 0 6px 10px rgba(0,0,0, .4), 0 6px 30px rgba(0,0,0, .4)
 $box-shadow-3: 0 4px 7px rgba(0,0,0, .3), 0 5px 7px rgba(0,0,0, .3)
+$box-shadow-2: 0 2px 4px rgba(0,0,0, .3), 0 2px 4px rgba(0,0,0, .3)
