More styling improvements & admin can now see total website visists and comparator requests

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -11,7 +11,7 @@ $white-1: #d6d6d6
 $white-0: #E0E0E0 // White Text
 
 // Blue
-$blue-10: rgba(0, 17, 35, 0.75)
+$blue-10: #101E31
 $blue-9: rgba(0, 15, 35, 0.75)
 $blue-8: #0f1324
 $blue-7: #161B33
